add option to use inpainting in image-to-image pipeline
